Cleaned up index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
-test
-<a href="./RecallUpdateTool.html">here</a>
+<br>
+<br>
+<a href="./RecallUpdateTool.html">Recall Update Tool</a>
 </html>
