moved the file hieracrchy

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <br>
 <br>
-<a href="./RecallUpdateTool.html">Recall Update Tool</a>
+<a href="./RecallUpdateTool">Recall Update Tool</a>
 </html>
