Added name for URL Query

--- a/RecallUpdateTool/index.html
+++ b/RecallUpdateTool/index.html
@@ -20,7 +20,7 @@
     <li>The information required for the spreadsheet can be found in the information below, as well as in the recall URL found below</li>
   </ol>
   <br>
-  Date of last recall update: <input type="text" id="lastRecall" onkeydown="if(event.keyCode==13) submit();">
+  Date of last recall update: <input type="text" id="lastRecall" name="dateInput" onkeydown="if(event.keyCode==13) submit();">
   <br>
   <input type="button" value="Submit" onclick="submit()">
   <br>
