--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
 <html>
-<br>
-<br>
-<a href="./RecallUpdateTool">Recall Update Tool</a>
+    <br>
+    <br>
+    <a href="./RecallUpdateTool">Recall Update Tool</a>
 </html>
