Cleaned Up Input areas.

--- a/DailyMTTInsert/index.html
+++ b/DailyMTTInsert/index.html
@@ -13,11 +13,11 @@
             <label for="dayOfYear">Day of Year:</label><br>
             <input type="text" id="dayOfYear" name="dayOfYear"><br>
             <label for="title">Title:</label><br>
-            <input type="text" id="title" name="title"><br>
+            <input type="text" id="title" name="title" size="35"><br>
             <label for="description">Description:</label><br>
-            <input type="text" id="description" name="description"><br>
+            <textarea id="description" name="description" rows="4" cols="50"></textarea> <br>
             <label for="imgFileName">Image File Name:</label><br>
-            <input type="text" id="imgFileName" name="imgFileName"><br>
+            <input type="text" id="imgFileName" name="imgFileName" size="35"><br>
             <button onclick="showImage();">Show Image</button>
             <div id="image" style="max-width: 1200; position:fixed; top:0; right:0;"></div>
             <br>
@@ -40,13 +40,13 @@
             <label for="postable_type">Postable Type:</label><br>
             <input type="text" id="postable_type" name="postable_type"><br>
             <label for="postable_title">Postable Title:</label><br>
-            <input type="text" id="postable_title" name="postable_title"><br>
+            <input type="text" id="postable_title" name="postable_title" size="35"><br>
             <label for="postable_description">Postable Description:</label><br>
-            <input type="text" id="postable_description" name="postable_description"><br>
+            <textarea id="postable_description" name="postable_description" rows="4" cols="50"></textarea> <br>
             <label for="postable_url">Postable URL:</label><br>
-            <input type="text" id="postable_url" name="postable_url"><br>
+            <input type="text" id="postable_url" name="postable_url" size="50"><br>
             <label for="postable_image">Postable Image:</label><br>
-            <input type="text" id="postable_image" name="postable_image"><br>
+            <input type="text" id="postable_image" name="postable_image" size="35"><br>
             <button onclick="showImage();">Show Image</button>
             <div id="image_B2B" style="max-width: 1200; position:fixed; top:0; right:0;"></div>
             <br>
