--- a/DailyMTTInsert/index.html
+++ b/DailyMTTInsert/index.html
@@ -174,6 +174,19 @@
         const situationsDiv = document.getElementById("situations");
         const SQLDiv = document.getElementById("SQL");
 
+        var getParams = function (url) {
+            query = url.split("?")[1];
+            var vars = query.split('&');
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split('=');
+
+                var input = document.getElementById(pair[0]);
+                if (input) {
+                    input.value = decodeURIComponent(pair[1]);
+                }
+            }
+        };
+
         function onLoad() {
             for (var i = 0; i < goals.length; i++) {
                 goalsDiv.innerHTML += '<input type="checkbox" id="' + goals[i] + '" name="' + goals[i] + '">';
@@ -188,6 +201,8 @@
                 B2BGoalsDiv.innerHTML += '<input type="checkbox" id="' + B2B_goals[i] + '" name="' + B2B_goals[i] + '">';
                 B2BGoalsDiv.innerHTML += '<label for="' + B2B_goals[i]+'">' + B2B_goals[i] + '</label><br>'
             }
+
+            getParams(window.location.search);
         }
 
         function toggleB2() {
