Added a link to the Econ Factor Calculator to the main index.html page.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
     <br>
     <a href="./RecallUpdateTool">Recall Update Tool</a>
     <br>
+    <a href="./EconFactorCalculator/">Econ Factor Calculator</a>
 </html>
