Added SYCLops to the publications.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alex Singer Portfolio</title>
+  <title>Alexandre Singer Portfolio</title>
 </head>
 <body>
-  <h1>Alex Singer's Portfolio</h1>
+  <h1>Alexandre Singer's Portfolio</h1>
   <p>//TODO: make this look good</p>
+
+  <h1>Publications</h1>
+  <p>SYCLops: A SYCL Specific LLVM to MLIR Converter</p>
+  <a href="https://dl.acm.org/doi/10.1145/3529538.3529992" target="_blank">Link to paper</a>
+  <br>
+  <br>
+  <iframe src="https://www.youtube.com/embed/yhArFYsiLcg" allowfullscreen></iframe>
 </body>
 </html>
