Added a redirect from the main page of this website to the portfolio.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <meta http-equiv="refresh" content="2; URL=https://portfolio-62f5a.web.app/" />
+</head>
 <html>
     <br>
     <br>
-    <a href="./RecallUpdateTool">Recall Update Tool</a>
-    <br>
-    <a href="./EconFactorCalculator/">Econ Factor Calculator</a>
+    Portfolio has moved. Redirecting to new location...
 </html>
