[Portfolio] Set Portfolio Website to Domain
Set the redirect to the portfolio website to the real domain.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="refresh" content="2; URL=https://portfolio-62f5a.web.app/" />
+  <meta http-equiv="refresh" content="2; URL=https://www.alex-singer.com" />
 </head>
 <html>
     <br>
